# hugosc

./: .gitignore  README.md  hugo.toml  package-lock.json  package.json  pub
archetypes/: default.md  posts.md
content/: .webp.md  about.md  brawlstars.md  clashofclans.md  clashroyale-deck-hog-cycle.md  clashroyale-decks.md  clashroyale.md  contact.md  copyright.md  disclaimer.md  editorial-policy.md  global.md  moco.md  privacy.md  resources.md  rewards-brawl-stars.md  rewards-clash-of-clans.md  rewards-clash-royale.md  rewards.md  search.md  tools.md  未命名.md
data/: rewards.yaml  tools.yaml
docs/: adsense-content-audit-2026-07.md  scbase-2.0-spec.md  scbase-clash-royale-cards-decks-spec.md  scbase-operations.md
layouts/: index.html  index.searchindex.json
public/: baidu_verify_codeva-BbCpRjhMed.html  index.html  index.xml  sitemap.xml  urls.txt
static/: Ads.txt  baidu_verify_codeva-Acvj7yFeZk.html  robots.txt
tools/: audit-clash-card-workflow.rb  audit-site.rb  (+5 more)
tools/content-publisher/: .env.example  .gitignore  README.md  publisher.config.example.yaml  publisher.config.yaml  pyproject.toml
tools/content-publisher/examples/: article.md
tools/content-publisher/references/: wechat-redream-obsidian-blue.md
tools/content-publisher/src/content_publisher/: cli.py  config.py  document.py  images.py  markdown_html.py  simple_yaml.py
tools/content-publisher/src/content_publisher/adapters/: baijiahao.py  hugo.py  wechat.py
tools/content-publisher/src/content_publisher/clients/: wechat.py
tools/content-publisher/tests/: test_document.py
(+1151 files in other folders)
