[project]
name = "obsidian-hugo-publisher"
version = "0.1.0"
description = "Lightweight Markdown publisher for Hugo, WeChat Official Account, and Baijiahao."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
]

[project.scripts]
content-publish = "content_publisher.cli:main"
